# my-data-project-iac

./: .env.sample  .gitignore  Cargo.toml  README.md  deploy.sh  destroy.sh
src/: helpers.rs  main.rs
src/full_stack_app/: backend.rs  database.rs  frontend.rs  mod.rs  object_store.rs  reverse_proxy.rs
src/my_full_stack_stack/: backend.rs  database.rs  frontend.rs  mod.rs  object_store.rs  reverse_proxy.rs
